# STS

./: .env.example  .gitignore  DEVELOPMENT.md  GITHUB_SECRETS.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  test_pipeline.py  test_scrapers.py
backend/migrations/: env.py
backend/scripts/: dev.sh
backend/src/: __init__.py  config.py  main.py
backend/src/api/v1/: __init__.py  admin.py  analytics.py  articles.py  auth.py  chat.py  chatkit.py  deps.py  keywords.py  oauth.py  users.py
backend/src/core/: __init__.py  exceptions.py  security.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/models/: __init__.py  analytics.py  article.py  conversation.py  keyword.py  user.py
backend/src/schemas/: __init__.py  analytics.py  article.py  chat.py  keyword.py  user.py
backend/src/services/: __init__.py  article_pipeline.py  article_service.py  keyword_service.py  scheduler.py
backend/src/services/agents/: __init__.py  ceo_agent.py
backend/src/services/ai_agent/: __init__.py  agent.py
backend/src/services/ai_agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
backend/src/services/ai_agent/tools/: __init__.py  data_query.py  financial_parser.py  kpi_analyzer.py
backend/src/services/chatkit/: __init__.py  server.py
backend/src/services/oauth/: __init__.py  line.py  supabase.py
backend/src/services/scrapers/: __init__.py  analyzer.py  base.py  devto.py  hackernews.py  manager.py  medium.py  reddit.py  rewriter.py  taiwan_news.py  x_scraper.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
deployment/docker/: backend.Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.supabase.yml  docker-compose.vm.yml  docker-compose.yml  frontend.Dockerfile
docs/: LOCAL_SUPABASE.md  PRODUCT_SPECIFICATION.md  VM_SETUP.md
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: deploy.sh  dev-local.sh  dev.sh  setup-local.sh
supabase/: config.toml
(+93 files in other folders)
