[project]
name = "sts-backend"
version = "0.1.0"
description = "STS - Smart Total Solution Backend API"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",  # Sync driver for Alembic migrations
    "alembic>=1.14.0",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP client
    "httpx>=0.28.0",

    # OpenAI
    "openai>=1.60.0",
    "openai-agents>=0.1.0",
    "openai-chatkit>=1.4.0",

    # Redis (for caching and sessions)
    "redis>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Additional AI providers (install as needed)
anthropic = [
    "anthropic>=0.40.0",
]
google = [
    "google-generativeai>=0.8.0",
]
all-providers = [
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",  # For testing with SQLite
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B009",   # do not call getattr with a constant attribute value
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
